<resources>
    <string name="app_name">VoicePay Alert</string>
    <string name="enable_notification_access">Enable Notification Access</string>
    <string name="battery_optimization">Ignore Battery Optimization</string>
    <string name="service_running">Service is Active</string>
    <string name="service_stopped">Service is Inactive</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="test_voice">Test Voice</string>
    <string name="voice_enabled">Voice Enabled</string>
    <string name="speak_sender_name">Speak Sender Name</string>
</resources>
